# ACVPlaybackUnit

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  ChangeLog.md  README.md  Versions.cmake  macOS_buildForRelease.sh
.git-ci/: fftw4win.sh  gitlab-iem.yml
DirectionalSampler/: CMakeLists.txt
DirectionalSampler/Source/: CostumEncoderList.h  Defaults.h  EnergySpherePanner.h  MasterControlWithText.h  Modes.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
_PluginTemplate/: CMakeLists.txt
_PluginTemplate/Source/: PluginEditor.cpp  PluginProcessor.cpp
_configurationFiles/: export_t_design.py  t_design_12ch.json  t_design_24ch.json  t_design_36ch.json  t_design_48ch.json  t_design_60ch.json
resources/: AmbisonicRotator.h  AmbisonicWarp.h  AudioProcessorBase.h  ConfigurationHelper.h  FeedbackDelayNetwork.h  IOHelper.h  MultiChannelFilter.h  OnePoleFilter.h
resources/NewtonApple/: NewtonApple_hull3D.h
resources/OSC/: OSCStatus.cpp
resources/Standalone/: IEM_AudioDeviceSelectorComponent.cpp  MyStandaloneFilterWindow.h
resources/customComponents/: CompressorVisualizer.h  DoubleSlider.h  FilterVisualizer.h  HammerAitovGrid.h  LevelMeter.h  MailBox.h  MuteSoloButton.h  RoundButton.h  SimpleLabel.h  SpherePanner.h  TitleBar.h
resources/lookAndFeel/: IEM_LaF.h
